# toit-font-tools

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  convertfont.toit  package.yaml
tests/: CMakeLists.txt  build-3x8-test.sh  build-3x8_test.sh
tests/gold/: 3x8proportional.toit
